# util

./: CMakeLists.txt  Makefile  README.md
inc/: util.hpp
src/: util.cpp
